# rs-hybrid-war

./: .gitignore  Cargo.toml  README.md
console/: Cargo.toml
console/src/: lib.rs  structs.rs
core/: Cargo.toml  clippy.toml
core/src/: lib.rs  monitoring.rs  prelude.rs
core/src/components/: animation.rs  mod.rs
core/src/systems/: animation.rs  mod.rs
src/: main.rs
src/core/: mod.rs  monitoring.rs
src/core/components/: mod.rs
src/core/systems/: mod.rs
wasm/: Cargo.toml
wasm/src/: animations.rs  color.rs  common.rs  components.rs  core.rs  easy_physics.rs  environment.rs  input.rs  lib.rs  logger.rs  materials.rs  player.rs  rect.rs  shells.rs  size.rs  sprites.rs  vec2d.rs
wasm/src/core/: camera.rs  canvas.rs  collision.rs  ecs.rs  extensions.rs  game_objects.rs  geometry.rs  gfx.rs  input.rs  monitoring.rs  scene.rs  typography.rs
wasm/src/core/collision/: components.rs  debug.rs  detections.rs
www/: package.json  tsconfig.json  webpack.config.js
www/public/: index.html
www/scripts/rs-watch-plugin/: index.js  options.json
www/src/: bench.js  control.ts  index.ts  wasm.ts
