[package]
name = "console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_egui = {git = "https://github.com/jakobhellermann/bevy_egui", branch = "bevy-main"}
# egui = "0.15.0"

