[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
authors = ["snatvb <snatvb@ya.ru>"]
description = "A sample project with wasm-pack"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.28"
js-sys = "0.3.55"
rapier2d = { version = "0.11", features = [ "simd-stable" ] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'ImageData',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  "console",
  'Performance',
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
