[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
authors = ["snatvb <snatvb@ya.ru>"]
description = "A sample project with wasm-pack"
license = "MIT"

# [build]
# target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

# [target.'cfg(target_arch = "wasm32")'.dependencies]
[dependencies]
wasm-bindgen = "0.2"
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
bevy_web_asset = "0.1"
bevy_webgl2 = "0.5"
benimator = "0.3.1"
lazy_static = "1.4.0"
derive_more = "0.99.17"
enum_dispatch = "0.3.7"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'Window',
]
